Update test mock user
RISDEV-8868